--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "2.1.3",
     "truffle": "5.0.5",
     "truffle-flattener": "^1.4.2",
+    "truffle-hdwallet-provider": "^1.0.17",
     "web3": "1.0.0-beta.55"
   },
   "scripts": {
